# kwiver

./: .gitattributes  .gitlab-ci.yml  .travis.yml  .uncrustify.cfg  BUILD.md  CMakeLists.txt  CTestConfig.cmake  Dockerfile  README.rst  pyproject.toml  setup.py
arrows/ceres/: CMakeLists.txt  bundle_adjust.cxx  bundle_adjust.h  camera_intrinsic_prior.h  camera_position.h  camera_smoothness.h  config_options_helpers.txx  lens_distortion.h  optimize_cameras.cxx  optimize_cameras.h  options.cxx  options.h  register_algorithms.cxx  reprojection_error.cxx  types.cxx  types.h
arrows/core/: CMakeLists.txt  associate_detections_to_tracks_threshold.cxx  associate_detections_to_tracks_threshold.h  class_probability_filter.cxx  class_probability_filter.h  class_probablity_filter.cxx  class_probablity_filter.h  close_loops_appearance_indexed.cxx  close_loops_appearance_indexed.h  close_loops_bad_frames_only.cxx  close_loops_bad_frames_only.h  close_loops_exhaustive.cxx  close_loops_exhaustive.h  close_loops_keyframe.cxx  close_loops_keyframe.h  close_loops_multi_method.cxx  close_loops_multi_method.h  colorize.cxx  colorize.h  compute_association_matrix_from_features.cxx  compute_association_matrix_from_features.h  compute_ref_homography_core.cxx  compute_ref_homography_core.h  convert_image_bypass.cxx  convert_image_bypass.h  create_detection_grid.cxx  create_detection_grid.h  csv_io.cxx  depth_utils.cxx  depth_utils.h  derive_metadata.cxx  derive_metadata.h  detect_features_filtered.cxx  detect_features_filtered.h  detected_object_set_input_csv.cxx  detected_object_set_input_csv.h  detected_object_set_input_kw18.cxx  detected_object_set_input_kw18.h  detected_object_set_input_simulator.cxx  detected_object_set_input_simulator.h  (+84 more)
arrows/dbow2/: BowVector.cxx  BowVector.h  CMakeLists.txt  DBoW2.h  FClass.h  FORB.cxx  FORB.h  FeatureVector.cxx  FeatureVector.h  QueryResults.cxx  QueryResults.h  Random.cxx  Random.h  ScoringObject.cxx  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h  Timestamp.cxx  Timestamp.h  match_descriptor_sets.cxx  match_descriptor_sets.h  register_algorithms.cxx
arrows/ffmpeg/: CMakeLists.txt  ffmpeg_convert_image.cxx  ffmpeg_convert_image.h  ffmpeg_cuda.cxx  ffmpeg_cuda.h  ffmpeg_init.cxx  ffmpeg_util.cxx  ffmpeg_util.h  ffmpeg_video_input.cxx  ffmpeg_video_input.h  ffmpeg_video_input_clip.cxx  ffmpeg_video_input_rewire.cxx  ffmpeg_video_input_rewire.h  ffmpeg_video_output.cxx  ffmpeg_video_output.h  ffmpeg_video_raw_image.h  ffmpeg_video_raw_metadata.cxx  ffmpeg_video_raw_metadata.h  ffmpeg_video_settings.h  ffmpeg_video_uninterpreted_data.h  register_algorithms.cxx
arrows/gdal/: CMakeLists.txt  image_container.cxx  image_container.h  image_io.cxx  image_io.h  register_algorithms.cxx
arrows/geocalc/: CMakeLists.txt  constants.h  geo_conv.cxx  geo_conv.h  projection.cxx  projection.h  register_algorithms.cxx
arrows/klv/: CMakeLists.txt  apply_child_klv.cxx  klv_0102.cxx  klv_0102.h  klv_0104.cxx  klv_0104.h  klv_0601.cxx  klv_0601.h  klv_0806.h  klv_0806_aoi_set.h  klv_0806_poi_set.h  klv_0806_user_defined_set.cxx  klv_0806_user_defined_set.h  klv_0903.cxx  klv_0903.h  klv_0903_algorithm_set.h  klv_0903_location_pack.cxx  klv_0903_location_pack.h  klv_0903_ontology_set.h  klv_0903_vchip_set.h  klv_0903_vfeature_set.h  klv_0903_vmask_set.cxx  klv_0903_vmask_set.h  klv_0903_vobject_set.h  klv_0903_vtarget_pack.cxx  klv_0903_vtarget_pack.h  klv_0903_vtrack_set.cxx  klv_0903_vtrack_set.h  klv_0903_vtracker_set.h  klv_0903_vtrackitem_pack.cxx  klv_0903_vtrackitem_pack.h  klv_1002.cxx  klv_1002.h  klv_1010.cxx  klv_1010.h  klv_1107.h  klv_1108.cxx  klv_1108.h  klv_1108_metric_set.cxx  klv_1108_metric_set.h  (+63 more)
arrows/mvg/: CMakeLists.txt  camera_options.cxx  camera_options.h  epipolar_geometry.cxx  epipolar_geometry.h  interpolate_camera.cxx  interpolate_camera.h  metrics.cxx  metrics.h  necker_reverse.cxx  necker_reverse.h  projected_track_set.cxx  projected_track_set.h  register_algorithms.cxx  sfm_utils.cxx  sfm_utils.h  transform.cxx  transform.h  triangulate.cxx  triangulate.h
arrows/ocv/: CMakeLists.txt  analyze_tracks.cxx  analyze_tracks.h  bounding_box.h  camera_intrinsics.cxx  camera_intrinsics.h  config_options_helpers.txx  descriptor_set.cxx  descriptor_set.h  detect_features.cxx  detect_features.h  detect_features_AGAST.cxx  detect_features_AGAST.h  detect_features_FAST.cxx  detect_features_FAST.h  detect_features_GFTT.cxx  detect_features_GFTT.h  detect_features_MSD.cxx  detect_features_MSD.h  detect_features_MSER.cxx  detect_features_MSER.h  detect_features_STAR.cxx  detect_features_STAR.h  detect_features_simple_blob.cxx  detect_features_simple_blob.h  detect_heat_map.cxx  detect_heat_map.h  detect_motion_3frame_differencing.cxx  detect_motion_3frame_differencing.h  detect_motion_mog2.cxx  detect_motion_mog2.h  draw_detected_object_set.cxx  draw_detected_object_set.h  draw_tracks.cxx  draw_tracks.h  estimate_fundamental_matrix.cxx  estimate_fundamental_matrix.h  estimate_homography.h  estimate_pnp.cxx  estimate_pnp.h  (+52 more)
arrows/super3d/: CMakeLists.txt  compute_depth.cxx  compute_depth.h  cost_volume.cxx  cost_volume.h  register_algorithms.cxx  tv_refine_search.cxx  tv_refine_search.h  util.cxx  util.h  warp_image.cxx  warp_image.h  warp_image.hxx  warp_image_instances.cxx  world_angled_frustum.cxx  world_angled_frustum.h  world_space.cxx  world_space.h
arrows/uuid/: CMakeLists.txt  register_algorithms.cxx  uuid_factory_uuid.cxx  uuid_factory_uuid.h
arrows/vxl/: CMakeLists.txt  aligned_edge_detection.cxx  aligned_edge_detection.h  average_frames.cxx  average_frames.h  bounding_box.h  bundle_adjust.cxx  bundle_adjust.h  camera.cxx  camera.h  camera_map.cxx  camera_map.h  close_loops_homography_guided.cxx  close_loops_homography_guided.h  image_io.cxx  (+49 more)
python/: CMakeLists.txt  README.md  build_wheel.sh  check_imports.py  clean_build.sh  requirements_dev.txt  setup.py
vital/: .gitattributes  CMakeLists.txt  algorithm_capabilities.cxx  algorithm_capabilities.h  any.h  attribute_set.cxx  attribute_set.h  bitflags.h  cpp_magic.h  noncopyable.h
(+2067 files in other folders)
